--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -10,11 +10,11 @@
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">SUPERGYM</div>
+        <div class="mx-3 sidebar-brand-text">SUPERGYM</div>
       </a>
 
       <!-- Divider -->
-      <hr class="sidebar-divider my-0">
+      <hr class="my-0 sidebar-divider">
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
@@ -27,7 +27,7 @@
       <hr class="sidebar-divider">
 
       <!-- Heading -->
-      <div class="sidebar-heading text-center">
+      <div class="text-center sidebar-heading">
         Controles:
       </div>
 
@@ -39,7 +39,7 @@
           <span>Agregar cuentas</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
+          <div class="py-2 bg-white rounded collapse-inner">
             <h6 class="collapse-header">Registrar nuevo:</h6>
             <a class="collapse-item" href="javascript:inframes(1)">Nuevo Cliente</a>       
             <div id="link" style="display: none;"><a class="collapse-item" href="javascript:inframes(2)">Nuevo Usuario</a> </div>         
@@ -56,7 +56,7 @@
           <span>Acciones</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
+          <div class="py-2 bg-white rounded collapse-inner">
             <h6 class="collapse-header">Acciones:</h6>
             <a class="collapse-item" href="javascript:inframes(3)">Membresias</a>
             <a class="collapse-item" href="javascript:inframes(4)">Actualizar cliente</a>
@@ -74,7 +74,7 @@
 
       <!-- Sidebar Toggler (Sidebar) -->
       <div class="text-center d-none d-md-inline">
-        <button class="rounded-circle border-0" id="sidebarToggle"></button>
+        <button class="border-0 rounded-circle" id="sidebarToggle"></button>
       </div>
 
     </ul>
@@ -87,11 +87,11 @@
       <div id="content">
 
         <!-- Begin Page Content -->
-        <div class="container-fluid text-white">
-          <div class="d-sm-flex align-items-center justify-content-between mb-4 pt-4">
-            <h1 class="h3 mb-0">Dashboard</h1>  
+        <div class="text-white container-fluid">
+          <div class="pt-4 mb-4 d-sm-flex align-items-center justify-content-between">
+            <h1 class="mb-0 h3">Dashboard</h1>  
                  
-          </div>   <h1>Hola {{user.username}}</h1>  
+          </div>   <h1>Hola Angel{{user.username}}</h1>  
            <div class="text-gray-900 ">
     
             {{> messages}}
@@ -132,7 +132,7 @@
         </div>
       </div>
     </div>
-    <a class="scroll-to-top rounded" href="#page-top">
+    <a class="rounded scroll-to-top" href="#page-top">
       <i class="fas fa-angle-up"></i>
     </a>
 </body>
